# scikit-fuzzy

./: .buildinfo  .coveragerc  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.txt  CONTRIBUTORS.txt  DEPENDS-docs.txt  DEPENDS-tests.txt  DEPENDS.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  TASKS.txt  contribute.html  documentation.html  example.py  example_tsk.py  genindex.html  index.html  install.html  license.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  requirements-docs.txt  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  user_guide.html
.github/workflows/: main.yml
_downloads/21e8083ff79e930c45a5b390e2856c6a/: plot_tipping_problem.py
_downloads/32bc9a350d105ab8730471aae5c8fa2d/: plot_tipping_problem.ipynb
_downloads/73d25e9f2afeb5023afbb7a96cf89e33/: plot_tipping_problem_newapi.ipynb
_downloads/8602739f4db656fd0145795ecb773c5e/: plot_control_system_advanced.ipynb
_downloads/b14db9e6309b1b7fbb328143cc2d2cd4/: plot_defuzzify.ipynb
_downloads/d87ebfd18ffaf4cb3182634aced8d24a/: plot_cmeans.ipynb
_modules/: index.html
_modules/skfuzzy/cluster/: _cmeans.html
_modules/skfuzzy/defuzzify/: defuzz.html  exceptions.html
_modules/skfuzzy/filters/: fire.html
_modules/skfuzzy/fuzzymath/: _continuous_to_discrete.html  fuzzy_logic.html  fuzzy_ops.html
_modules/skfuzzy/image/: imops.html  metrics.html  shape.html
_modules/skfuzzy/intervals/: intervalops.html
_modules/skfuzzy/membership/: generatemf.html
_sources/: documentation.txt  overview.txt
_sources/api/: index.txt
_sources/auto_examples/: index.txt  plot_cmeans.txt  plot_control_system_advanced.txt  plot_defuzzify.txt  plot_tipping_problem.txt  plot_tipping_problem_newapi.txt
_sources/gitwash/: development_workflow.txt  following_latest.txt  forking_hell.txt  git_intro.txt  index.txt  maintainer_workflow.txt  patching.txt  set_up_fork.txt
_sources/userguide/: getting_started.txt
_static/: random.js  skfuzzy_icon.py
api/: index.html
auto_examples/: index.html  plot_cmeans.html  plot_control_system_advanced.html  plot_defuzzify.html  plot_tipping_problem.html  plot_tipping_problem_newapi.html
docs/: Makefile  conf.py  documentation.rst  index.rst  install.rst  license.rst  make.bat  overview.rst
docs/_build/doctrees/: contents.doctree  documentation.doctree  environment.pickle  index.doctree  install.doctree  license.doctree  overview.doctree
docs/_build/doctrees/_templates/: class.doctree  class_with_call.doctree  function.doctree
docs/_build/doctrees/api/: api.doctree  skfuzzy.cluster.doctree  skfuzzy.control.doctree  skfuzzy.defuzzify.doctree  skfuzzy.doctree  skfuzzy.filter.doctree  skfuzzy.fuzzymath.doctree  skfuzzy.image.doctree  skfuzzy.intervals.doctree  skfuzzy.membership.doctree
docs/_build/html/: .buildinfo  contents.html  documentation.html  genindex.html  index.html  install.html  license.html  np-modindex.html  objects.inv  overview.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  skfuzzy.html
docs/_templates/: navbar.html
docs/api/: api.rst  skfuzzy.cluster.rst  skfuzzy.defuzzify.rst  skfuzzy.filter.rst  skfuzzy.image.rst  skfuzzy.intervals.rst
docs/examples/: plot_cmeans.py  plot_control_system_advanced.py  plot_defuzzify.py  plot_tipping_problem.py  plot_tipping_problem_newapi.py
docs/ext/: docscrape.py  notebook_doc.py  numpydoc.py  plot2rst.py  plot_directive.py
docs/logo/: Makefile  README.md  skfuzzy_icon.py  skfuzzy_logo.py
docs/source/: conf.py  contents.txt  contribute.txt  index.txt  install.txt  overview.txt  random_gallery.py  user_guide.txt
docs/source/_static/: docversions.js
docs/source/_templates/: navbar.html
docs/source/userguide/: fuzzy_control_primer.txt  getting_started.txt
docs/tools/: apigen.py  build_modref_templates.py
gitwash/: configure_git.html  development_workflow.html  following_latest.html  forking_hell.html  git_development.html  git_install.html  git_intro.html  git_resources.html  index.html  maintainer_workflow.html  patching.html  set_up_fork.html
skfuzzy/: __init__.py
skfuzzy/cluster/: __init__.py  _cmeans.py  normalize_columns.py
skfuzzy/cluster/tests/: test_cmeans.py  test_distance.py  test_normalize_columns.py
skfuzzy/control/: LICENSE.txt  __init__.py  antecedent_consequent.py  control.py  controlsystem.py  exceptions.py  fuzzyvariable.py  rule.py  state.py  term.py  visualization.py
skfuzzy/control/fcl/: FclLexer.py  FclParser.py  loader.py
skfuzzy/control/tests/: _badsupport.py  _mapping_tests.py  _skipclass.py  _test_support.py  test_controlsystem.py  test_crisp_value_calculator.py  test_fuzzyvariables.py  test_ordereddict.py  test_terms.py
skfuzzy/defuzzify/: __init__.py  defuzz.py  exceptions.py
skfuzzy/defuzzify/tests/: test_defuzz.py
skfuzzy/fcl/: README.md  __init__.py  fcl_parser.py  fcl_scanner.py  fcl_symbols.py
skfuzzy/fcl/Examples/: README.md
skfuzzy/fcl/local_ply/: WHAT_AM_I.txt
skfuzzy/fcl/support/: README.md  extramf.py  hedges.py  simulate.py  tnorms.py
skfuzzy/fcl/tests/: multiple.fcl  test_fcl_parser.py  tipper.fcl
skfuzzy/filter/: __init__.py  fire.py
skfuzzy/filters/: __init__.py  fire.py
skfuzzy/filters/tests/: test_fire.py
skfuzzy/fuzzymath/: __init__.py  _continuous_to_discrete.py  fuzzy_logic.py  fuzzy_ops.py
skfuzzy/fuzzymath/tests/: test_c2d.py  test_fuzzy_logic.py  test_fuzzy_ops.py
skfuzzy/image/: LICENSE.txt  __init__.py  arraypad.py  astronaut_gray.npy  astronaut_rgb.npy  imops.py  metrics.py  shape.py
skfuzzy/image/tests/: _skipclass.py  test_imops.py  test_metrics.py  test_pad.py  test_view_as_.py
skfuzzy/intervals/: __init__.py  intervalops.py
skfuzzy/intervals/tests/: test_intervalops.py
skfuzzy/mcdm/: __init__.py  _topsis.py
skfuzzy/mcdm/tests/: test_topsis.py
skfuzzy/membership/: __init__.py  generatemf.py
skfuzzy/membership/tests/: test_generatemf.py
tools/: build_versions.py  header.py
tools/antlr3/: Dockerfile  Fcl.g  README.md  docker-compose.yml
userguide/: fuzzy_control_primer.html  getting_started.html
(+70 files in other folders)
