[flake8]
exclude = .cache,.git,.tox,build,dist,docs,./*/_/frameworks/,__pycache__

[metadata]
description-file = README.md

[tool:pytest]
addopts = -s --maxfail=1 --failed-first --color=yes
filterwarnings = ignore::_pytest.warning_types.PytestUnknownMarkWarning
norecursedirs = .mypy_cache
python_files = test_*.py

[pytest-watch]
ext = .csv,.jinja2,.json,.py,.yaml,.yml
