[metadata]
name = scikit_fuzzy
version = 0.4.2
description = Fuzzy logic toolkit for SciPy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.python.org/pypi/scikit-fuzzy
maintainer = Joshua Warner
maintainer_email = joshua.dale.warner@gmail.com
license = Modified BSD
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
description_file = README.md
download_url = https://github.com/scikit-fuzzy/scikit-fuzzy
requires =
    matplotlib (>= 3.1.0)
    networkx (>= 1.9.0)
    numpy (>= 1.6.0)
    scipy (>= 0.9.0)

[options]
packages = find:
install_requires =
    matplotlib>=3.1.0
    networkx>=1.9.0
    numpy>=1.6.0
    scipy>=0.9.0
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude = docs

[options.package_data]
mkpkg =
    *.md
    *.npy
    *.txt

[tool:pytest]
addopts = -s --maxfail=1 --failed-first --color=yes
filterwarnings = ignore::_pytest.warning_types.PytestUnknownMarkWarning
norecursedirs = .mypy_cache
python_files = test_*.py

[pytest-watch]
ext = .csv,.jinja2,.json,.py,.yaml,.yml
